Added server.policy in cardshifter-server to use with the security manager when running the module from inside the IDE, also updated readme.